fixed project dependency issue

--- a/ListGeneratorTest/RandomListTest.csproj
+++ b/ListGeneratorTest/RandomListTest.csproj
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\NeilsonCodeChallangeJarre\RandomList.csproj" />
+    <ProjectReference Include="..\ListGenerator\RandomList.csproj" />
   </ItemGroup>
 
 </Project>
